--- a/index.htm
+++ b/index.htm
@@ -40,7 +40,7 @@
     </div>
 
     <div class="video-container">
-        <video autoplay="autoplay" muted class="back_video" loop=""autoplay"" src="untitled design.mp4"></video>
+        <video autoplay="autoplay" muted class="back_video" loop="" src="Untitled design.mp4"> </video>
     </div>
 </section>
 <section class="book" id="book">
